---
title: Quiniela 2026 — Modelo de Base de Datos
---
erDiagram
    users {
        int     id              PK
        string  username        UK  "NOT NULL"
        string  password_hash       "NOT NULL"
        int     is_admin            "0=normal, 1=admin"
        string  status              "Pending|Active|Rejected"
        int     total_points        "default 0"
        int     exact_scores        "default 0"
        datetime created_at
    }

    matches {
        int     id              PK
        string  home_team           "nullable (eliminatorias)"
        string  away_team           "nullable (eliminatorias)"
        string  home_team_code      "ISO alpha-2 para bandera"
        string  away_team_code      "ISO alpha-2 para bandera"
        string  home_team_placeholder "nullable"
        string  away_team_placeholder "nullable"
        datetime start_time         "NOT NULL"
        string  phase               "Groups|R32|R16|QF|SF|ThirdPlace|Final"
        string  group_name          "A-L, solo Fase de Grupos"
        int     matchday            "1-3, solo Fase de Grupos"
        string  venue               "nullable"
        int     home_score_final    "nullable hasta Finished"
        int     away_score_final    "nullable hasta Finished"
        string  status              "Scheduled|Finished"
        datetime created_at
    }

    predictions {
        int     id              PK
        int     user_id         FK  "NOT NULL"
        int     match_id        FK  "NOT NULL"
        int     home_score_guess    "NOT NULL"
        int     away_score_guess    "NOT NULL"
        int     points_earned       "nullable hasta resultado"
        datetime created_at
        datetime updated_at
    }

    bonus_predictions {
        int     id              PK
        int     user_id         FK  "NOT NULL"
        string  question_type       "Champion|TopScorer"
        string  prediction_text     "NOT NULL"
        int     points_earned       "nullable hasta validar"
        datetime created_at
    }

    users ||--o{ predictions       : "hace"
    matches ||--o{ predictions     : "recibe"
    users ||--o{ bonus_predictions : "hace"
